# steam-achievement-panel

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: release-workflow.yml
scripts/: package-linux.sh  package-macos.sh  package-windows.cmd
src/: app.rs  main.rs  steam_bridge.rs  steam_library.rs  theme.rs
